methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:1: error: Missing closing brace `}' assumed here
override def run() {avance();avance();avance();gauche();
^PictureMono2:1: error: expected start of definition
override def run() {avance();avance();avance();gauche();
         ^