methods.picture.PictureMono2.scala.code
override def run() {avance();avance();avance();gauche();
def faireV()  {avance();marquer();recule();gauche();avance();marquer();recule();droite();droite();avance();marquer();avance();avance();gauche();avance();avance();avance();gauche();}

def marquer() {baisseBrosse();leveBrosse();}

  faireV();faireV();faireV();faireV();